Nov 13, 2020
- added code to load GAF columns 16 and 17 ('annotation extension' and 'gene product form id')
  from source gaf files into table FULL_ANNOT
- optimized bottleneck code by preloading a map of PMID to RefRgdIds

Mar 16, 2020
- refactored code to address 1 out of 4 bottlenecks: isNot4Curation checks

Mar 03, 2020
- refactored code to address major bottleneck: annot checks in RGD
- generated file goa_rgd.txt no longer contains duplicates and is sorted alphabetically

Mar 02, 2020
- tuned up handling of stale annotations:
    if net annot drop could be greater than specified threshold (currently 5%), then abort the deletions and report it

Oct 21, 2019
- fixed potential issue with handling of obsolete annotations

v. 1.4.8, Jan 9, 2019
- updated build.gradle

v. 1.4.7, Nov 19, 2018
- update url for 'import references tool'

v. 1.4.6, Oct 15, 2018
- refactored build.gradle to produce lean runnable jar

v. 1.4.5, Sep 14, 2018
- moved from subversion to github
  implemented automatic conversion of data source field: 'UniProtKB' -> 'UniProt'

v. 1.4.4, Aug 22, 2018
- optimized handling of dates for IEA annotations, to minimize updates of created_date for annotations

v. 1.4.3, Jan 23, 2018
- implemented 5% delete threshold for stale annotations; configurable in properties file

v. 1.4.2, Jan 22, 2018
- implemented automatic conversion of data source field, currently: 'UniProt' -> 'UniProtKB'

v. 1.4.1, Jul 18, 2017
- IEA GO annotation for pipelines have their created date set to current date less 3 month, to avoid
  problems with GOC QC (IEA GO annotations older than 1 year are filtered out)

v. 1.4.0, Nov 8, 2016
- migrated build system from ANT to GRADLE

v. 1.3.1, Jun 21, 2016 -- per RGDD-1227
- when loading annotations with present 'annotation extension field'
  (http://wiki.geneontology.org/index.php/Annotation_Extension)
  relations are validated against 'http://viewvc.geneontology.org/viewvc/GO-SVN/trunk/ontology/extensions/gorel.obo'