@@ -23,10 +23,10 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.10'
+    compile 'org.apache.httpcomponents:httpclient:4.5.11'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.1.8.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.9.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.9.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
